--- a/client/Proyecto-Blockchain/package.json
+++ b/client/Proyecto-Blockchain/package.json
@@ -13,12 +13,14 @@
     "@nextui-org/react": "^2.1.7",
     "animate.css": "^4.1.1",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "framer-motion": "^10.16.1",
     "js-cookie": "^3.0.5",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
